[gd_scene load_steps=2 format=3 uid="uid://bhi80mcdmh34x"]

[ext_resource type="Script" uid="uid://bwl20a0507bvn" path="res://tools/RiscvRegViewer/riscv_reg_viewer.gd" id="1_47aki"]

[node name="Window" type="Window"]
auto_translate_mode = 1
title = "RISCV"
initial_position = 2
size = Vector2i(500, 500)
script = ExtResource("1_47aki")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer2"]
layout_mode = 2
text = "Регистры"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer2"]
layout_mode = 2

[node name="RegGridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 10
columns = 4

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer2"]
layout_mode = 2

[node name="ProgramCounterLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer2"]
layout_mode = 2
text = "pc: UNDEFINED"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 15
columns = 2

[node name="reg_mstatus" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "mstatus: TODO"

[node name="reg_mie" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "mie: TODO"

[node name="reg_mip" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "mip: TODO"

[node name="reg_mepc" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "mepc: TODO"

[node name="reg_tval" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "mtval: TODO"

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
text = "And more registers I don`t care about right now"

[node name="Button" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Просмотр памяти"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
